[project]
name = "agent-rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langchain-groq>=0.2.1",
    "langgraph>=0.2.61",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.1",
    "structlog>=24.4.0",
    "groq>=0.13.1",
    "unstructured[pdf]>=0.16.12",
    "playwright>=1.60.0",
    "unstructured-inference>=1.6.11",
    "pdfplumber>=0.11.9",
    "pdf2image>=1.17.0",
    "pytesseract>=0.3.13",
    "pymupdf4llm>=1.27.2.3",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.1.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.uv.sources]
# Using src-layout
